# TweetViralitySimulator

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: batch_score.py  compare_dataset.py  demo.py  kaggle_bootstrap.py  paper_eval.py  score_by_id.py
paper/: tvs_paper.tex
results/: compare_10k.csv  compare_brands.csv  ranked_by_accuracy_all.csv  top_1000_by_accuracy.csv  top_1000_by_score.csv
src/tweet_virality_simulator/: __init__.py  cascade.py  cli.py  config.py  embedding.py  engine.py  improve.py  models.py  profile.py
src/tweet_virality_simulator/generators/: __init__.py  base.py  heuristic.py  llm.py
src/tweet_virality_simulator/population/: audience.py  niches.py
src/tweet_virality_simulator/providers/: __init__.py  base.py  heuristic.py  ollama_provider.py  openai_compatible.py  openai_provider.py
src/tweet_virality_simulator/report/: __init__.py  card.py
src/tweet_virality_simulator/storage/: __init__.py  base.py  local.py
src/tweet_virality_simulator/tracing/: __init__.py  tracer.py
src/tweet_virality_simulator/validation/: __init__.py  dataset.py  harness.py  tune.py
